fix z-index on home component

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -2,6 +2,6 @@ div.home-wrapper {
   position: absolute;
   width: 100vw;
   height: 100vh;
-  /* overflow: hidden; */
+  z-index: -1;
   top: 0;
 }
